# cookiecutter-ds-popketle-base-project

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
src/cookiecutter_ds_popketle_base_project/: __init__.py
{{cookiecutter.project_name}}/: .gitignore  README.md  setup.py
{{cookiecutter.project_name}}/src/experiments/: description.md
