[project]
name = "cookiecutter-ds-popketle-base-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pop-ketle", email = "gshrhg@gmail.com" }
]
dependencies = [
    "pip>=24.1.1",
    "numpy>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cookiecutter_ds_popketle_base_project"]
